--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,10 +1,41 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <title>登陆页面</title>
+    <link href="favicon.ico" rel="shortcut icon" />
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
 </head>
-<body>
+<body style=" background: url(http://global.bing.com/az/hprichbg/rb/RavenWolf_EN-US4433795745_1920x1080.jpg) no-repeat center center fixed; background-size: 100%;">
+<div class="modal-dialog" style="margin-top: 15%;">
+    <div class="modal-content">
+        <div class="modal-header">
 
+            <h4 class="modal-title text-center" id="myModalLabel">登录</h4>
+        </div>
+        <div class="modal-body" id = "model-body">
+            <div class="form-group">
+
+                <input type="text" class="form-control"placeholder="用户名" autocomplete="off" id="username">
+            </div>
+            <div class="form-group">
+
+                <input type="password" class="form-control" placeholder="密码" autocomplete="off">
+            </div>
+        </div>
+        <div class="modal-footer">
+            <div class="form-group">
+                <button type="button" class="btn btn-primary form-control" onclick="login()">登录</button>
+            </div>
+            <div class="form-group">
+                <button type="button" class="btn btn-default form-control">注册</button>
+            </div>
+
+        </div>
+    </div>
+</div>
+    <script type="text/javascript" src="js/login.js"></script>
 </body>
 </html>
