--- a/src/main/resources/templates/onlinechat.html
+++ b/src/main/resources/templates/onlinechat.html
@@ -64,7 +64,7 @@
                     <span>...</span>
 
                 </form>
-                <input type=button value="发送" style="display:inline-block;margin-left: 80%" onclick="submit()">
+                <input id="send_msg" type=button value="发送" style="display:inline-block;margin-left: 80%" onclick="submit()">
             </div>
             <!-- 合并到上面了-->
 <!--            <input type=button value="发送"  style="margin-left: 85%;" onclick="submit()"> -->
