--- a/src/main/resources/templates/onlinechat.html
+++ b/src/main/resources/templates/onlinechat.html
@@ -57,14 +57,43 @@
                 <textarea id="msg" rows="5" cols="54" placeholder="输入消息" style="background:rgb(245 245 245);border: rgb(245 245 245);resize: none;outline:none;"></textarea>
             </div>
             <!-- TODO 文件上传功能 -->
-            <div>
+            <div style="position: relative">
                 <form method="post" action="/onlinechat/upload" enctype="multipart/form-data" style="display:inline-block;margin-left: 5px">
                     <input id="filecommit" type="submit" value="文件" style="position: relative;display: none">
                     <input id="upload" type="file" name="file" style="position: absolute;opacity: 0;width:20px" onchange="showFile()">
                     <span>...</span>
 
                 </form>
-                <input id="send_msg" type=button value="发送" style="display:inline-block;margin-left: 80%" onclick="submit()">
+
+                <!-- 新增 emojo表情-->
+                <table class="emojo" id="emojo">
+                    <tr name="emojos">
+                        <td value="😀" name="emojos" onclick="addEmojo(this)">😀</td>
+                        <td value="😐" name="emojos" onclick="addEmojo(this)">😐</td>
+                        <td value="😄" name="emojos" onclick="addEmojo(this)">😄</td>
+                        <td value="😁" name="emojos" onclick="addEmojo(this)">😁</td>
+                        <td value="😆" name="emojos" onclick="addEmojo(this)">😆</td>
+                    </tr>
+                    <tr name="emojos">
+                        <td value="😅" name="emojos" onclick="addEmojo(this)">😅</td>
+                        <td value="😂" name="emojos" onclick="addEmojo(this)">😂</td>
+                        <td value="😊" name="emojos" onclick="addEmojo(this)">😊</td>
+                        <td value="😇" name="emojos" onclick="addEmojo(this)">😇</td>
+                        <td value="🙂" name="emojos" onclick="addEmojo(this)">🙂</td>
+                    </tr>
+                    <tr name="emojos">
+                        <td value="🙃" name="emojos" onclick="addEmojo(this)">🙃</td>
+                        <td value="😉" name="emojos" onclick="addEmojo(this)">😉</td>
+                        <td value="😓" name="emojos" onclick="addEmojo(this)">😓</td>
+                        <td value="😪" name="emojos" onclick="addEmojo(this)">😪</td>
+                        <td value="🙄" name="emojos" onclick="addEmojo(this)">🙄</td>
+                    </tr>
+                </table>
+
+                <label style="display:inline-block;margin-left: 40%" onclick="showTable()" id="emojoTip">😶</label>
+
+                <input type=button value="发送" style="display:inline-block;margin-left: 34%" onclick="submit()">
+<!--                <input id="send_msg" type=button value="发送" style="display:inline-block;margin-left: 80%" onclick="submit()">-->
             </div>
             <!-- 合并到上面了-->
 <!--            <input type=button value="发送"  style="margin-left: 85%;" onclick="submit()"> -->
