修正循环产生的bug

--- a/src/main/resources/templates/onlinechat.html
+++ b/src/main/resources/templates/onlinechat.html
@@ -92,7 +92,7 @@
 
                 <label style="display:inline-block;margin-left: 40%" onclick="showTable()" id="emojoTip">😶</label>
 
-                <input type=button value="发送" style="display:inline-block;margin-left: 34%" onclick="submit()">
+                <input id="send_msg" type="button" value="发送" style="display:inline-block;margin-left: 34%" onclick="submit()">
 <!--                <input id="send_msg" type=button value="发送" style="display:inline-block;margin-left: 80%" onclick="submit()">-->
             </div>
             <!-- 合并到上面了-->
